Register requests are now deleted after 2 days from confirmation, fixed login view in the navbar on mobile for long email adresses

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -616,4 +616,12 @@ textarea {
         line-height: 2em;
         justify-content: space-between;
     }
+    .user-email {
+        width: 90%;
+        overflow-x: hidden;
+    }
+    .list-item-underlined {
+        flex-direction: column;
+    }
+
 }
